# VIC_SAVE_PUCK

./: .gitignore  README.md  pyproject.toml
backend/: data_loader.py  main.py  requirements.txt
backend/data/.cache/: enriched.parquet  games.parquet  profile_category_mix.parquet  profile_item_curves.parquet  profile_percap_curves.parquet  profile_stand_curves.parquet  profile_stand_item_curves.parquet  transactions.parquet  weather.json
backend/engine/: config.py
backend/engine/ai/: event_optimizer.py  forecast_analyst.py  post_game.py  reasoning.py
backend/engine/data/: enricher.py  loader.py  profiles.py
backend/engine/models/: correction.py  drift.py  forecast.py  prep_plan.py  traffic_light.py
backend/engine/simulator/: engine.py  scenarios.py
backend/engine/validation/: backtest.py
docs/: HACKATHON_JUDGING_CRITERIA.md  brief.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  BacktestView.jsx  EventView.jsx  SimulationView.jsx  api.js  index.css  main.jsx
src/vic_save_puck/: __main__.py  config.py  demo.py
src/vic_save_puck/ai/: event_optimizer.py  forecast_analyst.py  post_game.py  reasoning.py
src/vic_save_puck/data/: enricher.py  loader.py  profiles.py
src/vic_save_puck/models/: correction.py  drift.py  forecast.py  prep_plan.py  traffic_light.py
src/vic_save_puck/simulator/: engine.py  scenarios.py
src/vic_save_puck/validation/: backtest.py
src/vic_save_puck/web/: __init__.py  app.py  events.py  routes.py  serializers.py  simulation.py
src/vic_save_puck/web/templates/: dashboard.html
(+6 files in other folders)
