[project]
name = "vic-save-puck"
version = "0.1.0"
description = "AI-powered F&B demand optimization for Save on Foods Memorial Centre"
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.2",
    "openpyxl>=3.1",
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "anthropic>=0.50",
    "httpx>=0.27",
    "pyarrow>=18.0",
    "rich>=13.0",
    "flask>=3.0",
    "flask-socketio>=5.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ipython>=8.0",
    "jupyter>=1.0",
]
